--- a/app/frontend/components/organisms/Body/Body.css
+++ b/app/frontend/components/organisms/Body/Body.css
@@ -9,4 +9,10 @@
 
 .body {
   mix-blend-mode: var(--body-blend-mode);
+  container-name: body;
+  container-type: inline-size;
+
+  > section {
+    grid-column: main;
+  }
 }
