--- a/app/frontend/components/atoms/Icon/Icon.css
+++ b/app/frontend/components/atoms/Icon/Icon.css
@@ -23,16 +23,24 @@
     }
   }
 
-  &:where([data-size="small"]) {
-    --icon-size: var(--icon-small);
+  &:where([data-size="xs"]) {
+    --icon-size: var(--icon-xs);
   }
 
-  &:where([data-size="medium"]) {
-    --icon-size: var(--icon-medium);
+  &:where([data-size="sm"]) {
+    --icon-size: var(--icon-sm);
   }
 
-  &:where([data-size="large"]) {
-    --icon-size: var(--icon-large);
+  &:where([data-size="md"]) {
+    --icon-size: var(--icon-md);
+  }
+
+  &:where([data-size="lg"]) {
+    --icon-size: var(--icon-lg);
+  }
+
+  &:where([data-size="xl"]) {
+    --icon-size: var(--icon-xl);
   }
 
   &:where([data-size="huge"]) {
