--- a/app/frontend/styles/new/application.css
+++ b/app/frontend/styles/new/application.css
@@ -67,3 +67,19 @@ a {
     color: var(--link-hover);
   }
 }
+
+.radix-themes {
+  --cursor-button: pointer;
+  --cursor-checkbox: pointer;
+  --cursor-disabled: default;
+  --cursor-link: pointer;
+  --cursor-menu-item: pointer;
+  --cursor-radio: pointer;
+  --cursor-slider-thumb: grab;
+  --cursor-slider-thumb-active: grabbing;
+  --cursor-switch: pointer;
+}
+
+.rt-BaseDialogOverlay {
+  z-index: var(--z-index-modal);
+}
