--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -237,7 +237,7 @@
   --yellow-alpha-12: hsl(53 97% 86% / 0.96);
   --yellow-inverse-subtle: var(--yellow-2);
   --translucent: hsla(240 6% 7% / 0.85);
-  --background-translucent: hsla(240 0% 0% / 0.85);
+  --background-translucent: hsla(240 6% 7% / 0.85);
   --focus-magenta: var(--magenta-alpha-5);
   --focus-cyan: var(--cyan-alpha-5);
   --focus-yellow: var(--yellow-alpha-5);
@@ -296,10 +296,11 @@ body,
   --text-inverse: var(--neutral-1);
   --text-subtle: var(--neutral-11);
   --icon: var(--text-subtle);
+  --color-background: var(--neutral-1);
   --background-app: var(--neutral-1);
   --background-element: var(--neutral-3);
   --background-element-hover: var(--neutral-4);
-  --background-input: var(--background-app);
+  --background-input: var(--color-background);
   --background-inverse: var(--neutral-12);
   --background-solid: var(--neutral-9);
   --background-subtle: var(--neutral-2);
