--- a/old/molecules/BlurrableImage/BlurrableImage.css
+++ b/old/molecules/BlurrableImage/BlurrableImage.css
@@ -1,11 +1,13 @@
 .blurrable-image {
   overflow: hidden;
   width: 100%;
+  height: 100%;
   border-radius: inherit;
   aspect-ratio: 16 / 9;
 
   &__blurred {
     position: relative;
+    display: block;
 
     canvas {
       position: absolute;
